[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.12",
    "numpy",
    "mujoco==3.8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-uni"
version = "0.1.0"
description = "Standalone MuJoCoUni batched executor layer"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
dependencies = [
    "mujoco==3.8.0",
    "numpy",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mujoco_uni", "mujoco_uni.compiled", "mujoco_uni.runtime"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "E402", "N801", "N802", "N803"]
